--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "0.30.1",
     "@orca-so/common-sdk": "^0.6.3",
+    "@orca-so/whirlpools-sdk": "^0.13.7",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
