--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "anchor-301": "npm:@coral-xyz/anchor@0.30.1",
     "@coral-xyz/anchor": "0.29.0",
     "@orca-so/common-sdk": "^0.6.3",
     "@orca-so/whirlpools-sdk": "file:./whirlpool",
@@ -26,6 +25,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
     "@types/bn.js": "^5.1.6",
+    "anchor-301": "npm:@coral-xyz/anchor@0.30.1",
     "axios": "^1.7.7",
     "bn.js": "^5.2.1",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +34,7 @@
     "immutable": "^4.3.7",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
+    "node-cache": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
     "sqlite": "^5.1.1",
